# spellchecker

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/algorithms/: MatrixChecker.h  RecursiveChecker.h  SingleRowChecker.h  SpellChecker.h
inc/spellchecker/: Interpreter.h
inc/utils/: Matrix.h  Order.h  StringUtils.h  string_utils.h
src/: main.cpp
src/algorithms/: MatrixChecker.cpp  RecursiveChecker.cpp  SingleRowChecker.cpp  SpellChecker.cpp
src/spellchecker/: Interpreter.cpp
src/utils/: StringUtils.cpp  string_utils.cpp
